test: 테스트 커버리지 확대 + 기존 실패 테스트 전부 수정 (129/129 통과)
기존 실패 8건 수정:
- SnsServiceTest: 좋아요·댓글 테스트가 서비스의 원자적 DB 업데이트
  (postRepository.incrementLikeCount/incrementCommentCount) 를 반영하도록 mock 재작성.
  카운트는 repository 호출 검증으로 대체.
- DashboardServiceTest: countByStudentId/getAverageScorePercentByStudentId/
  findTop10ByStudentIdOrderBySubmittedAtDesc 등 실제 서비스 메서드에 맞춰 mock 수정.
  가중 평균 계산식(quizAvg * quizCount + gradeQuizAvg * gradeQuizCount)에 맞춰 테스트 기대값 조정.
- FullIntegrationTest.snsFlow: PostRepository의 @Modifying 쿼리가
  영속성 컨텍스트 캐시를 비우도록 clearAutomatically=true 추가
  → flush 직후 findById가 최신 값 반환 → likeCount 검증 통과.
- AuthControllerIntegrationTest.resetPassword: 요청에서 name 필드 제거,
  응답에 tempPassword가 포함되지 않음을 검증, USER_NOT_FOUND 케이스 추가.

신규 단위 테스트 추가:
- EnumUtilTest: safeValueOf/safeValueOfUpperCase의 유효·무효·null·대소문자 케이스
- GradeLabelMapperTest: 12개 학년 코드 + null/blank/미매핑 폴백 케이스
- AuthConstantsTest: Authorization 헤더명, Bearer 접두어 길이, ROLE_ 접두어 회귀 방어
- BatchExecutionServiceTest: 3개 잡 이름 분기 + 알 수 없는 이름(BATCH_JOB_NOT_FOUND) +
  실행 실패(BATCH_JOB_FAILED) 시나리오. Lombok+@InjectMocks 타입 충돌 이슈 회피를 위해
  수동 생성자 주입 방식 사용.
- FileStorageServiceTest: 유효 이미지, 확장자 없음, UUID 고유성, 빈 파일/null/
  잘못된 MIME/Content-Type 누락/10MB 초과 전 경우 검증. @TempDir로 실제 I/O 격리.

신규 테스트 파일 5개, 기존 테스트 수정 4개, 프로덕션 코드 개선 1개(@Modifying clearAutomatically).
총 129개 테스트 전부 통과.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>